--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~L4gUlCoQ#gSQ-W3jQbt2bHnrmBE-9fXTkF_MWvhr6E50MJP7SHZA"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NUMBER=+94726655459
+SUDO_NUMBER=+94726655459
+OWNER_NAME=JUST ME 🌹
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
