--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID="INCONNU~XD~L4gUlCoQ#gSQ-W3jQbt2bHnrmBE-9fXTkF_MWvhr6E50MJP7SHZA"
+SESSION_ID="INCONNU~XD~G0Q3XQJI#-Y7DoqfuJfFom3uwjDovpwV5689k1GXehg7RHWfuo9g"
 PREFIX=.
 OWNER_NUMBER=+94726655459
 SUDO_NUMBER=+94726655459
